# flow_squared

./: .gitignore  .mcp.json  AGENTS.md  AGENTS_README.md  CLAUDE.md  COVERAGE_VALIDATION_REPORT.md  Dockerfile  MOCK_AUDIT_DETAILED_FINDINGS.md  MOCK_USAGE_AUDIT_SUMMARY.txt  PHASE_6_COVERAGE_MAP.json  README.md  REPORTS_IC_SUMMARY.txt  REPORTS_INTERFACES_README.md  REPORTS_INTERFACE_CONTRACTS.md  REPORTS_START_HERE.txt  TDD_AUDIT_SUMMARY.txt  TDD_COMPLIANCE_AUDIT.json  TDD_COMPLIANCE_AUDIT.md  THIRD_PARTY_LICENSES  config_objects.json  coverage.txt  docker-compose.yml  justfile  pyproject.toml  pytest.ini  release-please-config.json  test-report.mjs  tree_cli.json
.chainglass/data/: activity-log.jsonl
.claude/: settings.local.json
.devcontainer/: Dockerfile  compose.yml  devcontainer-lock.json  devcontainer.json  post-install.sh
.flowspace/: config.yaml  registry.yaml
.fs2/: config.yaml  config.yaml.example  secrets.env.example
.github/workflows/: ci.yml  codeql.yml  release-please.yml
.serena/: project.yml
.tmp/: review.phase-2-template-system.unified.diff
agents/_shared/: preamble.md
agents/code-review/: instructions.md  output-schema.json  prompt.md
docs/domains/: domain-map.md  registry.md
docs/how/: AGENTS.md  cli.md  llm-adapter-extension.md  mcp-server-guide.md  tdd.md  womhole-mcp-guide.md  write-new-content-guide.md
docs/rules-idioms-architecture/: architecture.md  constitution.md  idioms.md  rules.md
harness/: difficulty-ledger.md
initial_exploration/: FINDINGS.md  GRAMMAR_AVAILABILITY.md  README.md  main.py  pyproject.toml
initial_exploration/outputs/: Dockerfile.ast.json  Dockerfile.symbols.json  sample.cpp.ast.json  sample.cpp.symbols.json  sample.cs.ast.json  sample.cs.symbols.json  sample.dart.ast.json  sample.dart.symbols.json  sample.go.ast.json  sample.go.symbols.json  sample.js.ast.json  sample.js.symbols.json  sample.json.ast.json  sample.json.symbols.json  sample.md.ast.json  sample.md.symbols.json  sample.py.ast.json  sample.py.symbols.json  sample.rs.ast.json  sample.rs.symbols.json  sample.sh.ast.json  sample.sh.symbols.json  sample.sql.ast.json  sample.sql.symbols.json  sample.tf.ast.json  sample.tf.symbols.json  sample.toml.ast.json  sample.toml.symbols.json  sample.ts.ast.json  sample.ts.symbols.json  sample.yaml.ast.json  sample.yaml.symbols.json
initial_exploration/samples/: symbols_sample.json  symbols_sample_go.json  symbols_sample_markdown.json
initial_exploration/scripts/: extract_symbols.py  parse_to_json.py
scripts/: diagnose_merge_simulation.py  diagnose_smart_content.py  doc_build.py  enrich_fixture_smart_content.py  fs2-scan-on-change.sh  fs2-watch.sh  generate_fixture_graph.py  graph_report.py  lsp_demo_extract.py  mcp_tools_dump.py  test_semantic_search.py  validate_lsp_graph_integration.py  verify-lsp-servers.sh
scripts/cross-files-rels-research/: requirements.txt
scripts/embeddings/: benchmark.py
scripts/fastcode-explore/: mini_crossfile.py
scripts/lsp/: README.md  __init__.py  detect_project_root.py  language.py  test_detection.py  validate_solidlsp_cross_file.py
scripts/lsp_install/: install_all.sh  install_dotnet.sh  install_go.sh  install_gopls.sh  install_pyright.sh  install_typescript_ls.sh
scripts/scip/: compare_scip_output.py  test-all-indexers.sh
scripts/scratch/: check_node_ids.py  diagnose_hash_instability.py  diagnose_reprocessing.py  diagnose_saved_vs_fresh.py  diagnose_tf_ast.py  diagnose_tf_nodeids.py  find_all_duplicates.py  investigate_embedding_reprocessing.py  pgvector_prototype.py
scripts/serena-explore/: benchmark.py  benchmark_multi.py  benchmark_parallel.py  benchmark_stdio.py  harness.py  test_multi_lang.py
src/fs2/: __init__.py  __main__.py
tests/: conftest.py
tests/cli_tests/: __init__.py  conftest.py  test_mcp_command.py
tests/docs/: test_sample_adapter_pattern.py
tests/fixtures/: README.md  __init__.py  fixture_graph.pkl.backup
tests/integration/: __init__.py  conftest.py  test_call_extraction_integration.py  test_cli_embeddings.py  test_cli_multi_graph.py  test_cross_file_acceptance.py  test_cross_file_integration.py  test_docs_service_integration.py  test_e2e_embedding_validation.py  test_embedding_pipeline.py  test_fixture_graph_integration.py  test_fs2_cli_integration.py  test_get_node_cli_integration.py  test_llm_integration.py  test_lsp_gopls.py  test_lsp_pyright.py  test_lsp_roslyn.py  test_lsp_typescript.py  test_relationship_pipeline.py  test_scan_graceful_degradation.py  test_scan_pipeline_integration.py  test_search_cli_integration.py  test_search_integration.py  test_symbol_level_edges.py  test_text_reference_integration.py  test_tree_cli_integration.py
tests/mcp_tests/: conftest.py  test_cache_invalidation.py  test_dependencies.py  test_docs_tools.py  test_errors.py  test_get_node_tool.py  test_list_graphs.py  test_mcp_embedding_preload.py  test_mcp_integration.py  test_mcp_real_embeddings.py  test_protocol.py  test_search_tool.py  test_tree_tool.py
tests/scratch/: conftest.py  test_async_works.py  test_azure_ad_auth.py  test_azure_real.py  test_llm_quick.py  validate_chunk_offsets.py
(+1268 files in other folders)
