[project]
name = "fs2"
version = "0.1.0"
description = "Flowspace2 - Clean Architecture Python scaffold"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "openai>=1.0.0",
    "pathspec>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tiktoken>=0.7.0",
    "tree-sitter-language-pack>=0.13.0",
    "typer>=0.9",
]

[project.scripts]
fs2 = "fs2.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top (needed for logger setup pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "SIM102"]  # allow pytest.raises(Exception), nested ifs for clarity

[tool.ruff.lint.isort]
known-first-party = ["fs2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fs2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
