[project]
name = "fs2"
version = "0.1.0"
description = "Flowspace2 - Clean Architecture Python scaffold"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.18.0,<2",
    "fastmcp>=2.0.0",
    "jinja2>=3.1",
    "networkx>=3.0",
    "numpy>=1.24",
    "openai>=1.0.0",
    "pathspec>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "protobuf>=6.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "regex>=2025.11.3",
    "rich>=13.0",
    "ruamel-yaml>=0.18",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7.0",
    "torch>=2.0",
    "tree-sitter-language-pack>=0.13.0",
    "typer>=0.9",
    "watchfiles>=0.21",
]

[project.scripts]
fs2 = "fs2.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]
local-embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "tests/fixtures/ast_samples/python/syntax_error.py",  # Intentional syntax errors for parser testing
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top (needed for logger setup pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "SIM102"]  # allow pytest.raises(Exception), nested ifs for clarity

[tool.ruff.lint.isort]
known-first-party = ["fs2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fs2"]
include = [
    "src/fs2/core/templates/**/*.j2",
    "src/fs2/core/templates/**/*.html.j2",
    "src/fs2/core/static/**/*.js",
    "src/fs2/core/static/**/*.css",
    "src/fs2/core/static/**/*.woff2",
    "src/fs2/docs/**/*.yaml",
    "src/fs2/docs/**/*.md",
    "src/fs2/docs/**/*.example",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/fs2/core/templates/**/*.j2",
    "src/fs2/core/templates/**/*.html.j2",
    "src/fs2/core/static/**/*.js",
    "src/fs2/core/static/**/*.css",
    "src/fs2/core/static/**/*.woff2",
    "src/fs2/docs/**/*.yaml",
    "src/fs2/docs/**/*.md",
    "src/fs2/docs/**/*.example",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
